--- a/InteractiveMapSJSU/app/src/main/AndroidManifest.xml
+++ b/InteractiveMapSJSU/app/src/main/AndroidManifest.xml
@@ -20,9 +20,9 @@
         </activity>
 
         <activity android:name=".KingActivity" />
-        <activity android:name=".EnggActivity">
+        <activity android:name=".EnggActivity"/>
+        <activity android:name=".GarageActivity"/>
 
-        </activity>
     </application>
 
 
