--- a/InteractiveMapSJSU/app/src/main/AndroidManifest.xml
+++ b/InteractiveMapSJSU/app/src/main/AndroidManifest.xml
@@ -10,18 +10,34 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:launchMode="singleTop"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+
         </activity>
 
         <activity android:name=".KingActivity" />
         <activity android:name=".EnggActivity"/>
         <activity android:name=".GarageActivity"/>
+        <activity android:name=".SVActivity"/>
+        <activity android:name=".StreetActivity"/>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDpOyiNBgswiJ4Wy0zjG7ZmUYgKs02E2YA"/>
 
     </application>
 
